# AoC2021

./: AOC-haskell-template.cabal  CHANGELOG.md  README.md
common/AOC/: Common.hs
day06/: Main.hs
setup/: Main.hs
