cabal-version:      2.4
name:               aoc
version:            0.1.0.0

synopsis:           A template repository for solving Advent of Code problems with Haskell

-- A URL where users can report bugs.
bug-reports:        https://github.com/JakobBruenker/AOC-haskell-template

-- The license under which the package is released.
-- license:
author:             Jakob Bruenker
maintainer:         jbruenker@partner.eso.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  AOC.Common

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        Boolean,
        generic-lens,
        string-interpolate,
        mtl,
        monad-loops,
        split,
        text,
        these,
        profunctors,
        random,
        lens,
    hs-source-dirs:   common
    default-language: Haskell2010
    ghc-options:      -Wall

executable setup
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.0.0,
        ghc-prim,
        directory,
    hs-source-dirs:   setup
    default-language: Haskell2010

    ghc-options:      -Wall

executable day01
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day01
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day02
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day02
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day03
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day03
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day04
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day04
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day05
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day05
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day06
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day06
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day07
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day07
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day08
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day08
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day09
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day09
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day10
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day10
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day11
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day11
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day12
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day12
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day13
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day13
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day14
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day14
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day15
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day15
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day16
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day16
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day17
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day17
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day18
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day18
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day19
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day19
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day20
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day20
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day21
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day21
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day22
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day22
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day23
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day23
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day24
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day24
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables

executable day25
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        HexFloatLiterals
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        LexicalNegation
        MultiWayIf
        NamedFieldPuns
        NumDecimals
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day25
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wno-unused-imports
                      -Wno-type-defaults
                      -Wno-missing-signatures
                      -fdefer-type-errors
                      -fdefer-out-of-scope-variables
